@@ -66,6 +66,7 @@ sequence:
   - luksopenswaphookcfg
   - initcpiocfg
   - initcpio
+  - zfshostid
   - users
   - networkcfg
   - displaymanager
