@@ -1,0 +1,8 @@
+# SPDX-FileCopyrightText: no
+# SPDX-License-Identifier: CC0-1.0
+---
+type:       "job"
+name:       "zfshostid"
+interface:  "python"
+script:     "main.py"
+noconfig:   true
